<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Journal 2014</string>

    <!-- Un autre test -->


    <!-- TEXTES COMMUNS -->
    <string name="bt_ok">OK</string>
    <string name="bt_annuler">ANNULER</string>
    <string name="bt_valider">VALIDER</string>
    <string name="bt_ajouter">AJOUTER</string>
    <string name="bt_modifier">MODIFIER</string>
    <string name="bt_supprimer">SUPPRIMER</string>
    <string name="hello_world">Hello world!</string>
    <string name="cls">CLS</string>
    <string name="plus">+</string>
    <string name="moins">-</string>
    <string name="modifier">v</string>
    <string name="premier">&#60;&#60;</string>
    <string name="precedent">&#60;</string>
    <string name="suivant">&#62;</string>
    <string name="dernier">&#62;&#62;</string>

    <!-- RUBRIQUES -->
    <string name="action_settings">Settings</string>
    <string name="email">E-mail : </string>
    <string name="mdp">MDP : </string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="id_rubrique">ID Rubrique : </string>
    <string name="rubrique">Rubrique : </string>
    <string name="id_mot_cle">ID Mot-Clé : </string>
    <string name="mot_cle">Mot-Clé : </string>
    <string name="id_etat_article">ID état article : </string>
    <string name="etat_article">Etat article : </string>
    <string name="message">Message</string>
    <string name="selectionner">Sélectionnez</string>

    <!-- LOGIN ACTIVITY -->
    <string name="login_accueil_message">Veuillez vous identifier</string>
    <string name="login_label_identifiant">Identifiant</string>
    <string name="login_label_mot_de_passe">Mot de passe</string>
    <string name="validation_erreur">Vous devez corriger les erreurs suivantes</string>
    <string name="validation_login_absent">Vous devez saisir un identifiant</string>
    <string name="validation_mdp_absent">Vous devez saisir un mot de passe</string>
    <string name="authentification_echec">Votre couple identifiant/mot de passe est incorrect</string>

    <!-- MENU PRINCIPAL -->
    <string name="title_activity_menu_principal">Menu Principal</string>
    <string name="title_activity_journaliste">Journalistes</string>
    <string name="title_activity_journaliste_form">Journaliste</string>
    <string name="login_titre_fenetre">Login</string>
    <string name="title_activity_sommaire">Sommaire</string>
    <string name="title_activity_statut">Statuts</string>
    <string name="title_activity_categorie">Catégories</string>
    <string name="title_activity_civilite">Civilités</string>
    <string name="title_activity_rubrique">CRUD Rubriques</string>
    <string name="title_activity_mot_cle">CRUD Mots-Clés</string>
    <string name="title_activity_etat_article">CRUD Etats articles</string>
    <string name="title_activity_contributeur">CRUD Contributeur</string>
    <string name="title_activity_article_ajout">Article+</string>
    <string name="title_activity_article_suppression">Article-</string>
    <string name="title_activity_article_validation">Validation</string>
    <string name="title_activity_article_modification">Modification</string>
    <string name="title_activity_article_archivage">Archivage</string>

    <!-- JOURNALISTES -->

    <string name="label_nom">Nom</string>
    <string name="label_prenom">Prénom</string>
    <string name="label_pseudo">Pseudo</string>
    <string name="label_mdp">Mot de passe</string>
    <string name="label_mdp_confirm">Confirmation Mot de passe</string>
    <string name="label_email">e-mail</string>
    <string name="label_email_confirm">Confirmation e-mail</string>
    <string name="label_civilite">Civilité</string>
    <string name="label_date_inscription">Date inscription</string>
    <string name="label_photo">Photo</string>
    <string name="label_offre_partenaire">Offre partenaire</string>
    <string name="label_journaliste_statut">Statut</string>
    <string name="label_journaliste_id">ID</string>
    <string name="label_monsieur">Monsieur</string>
    <string name="label_madame">Madame</string>
    <string name="title_activity_test_dao">TestDAO</string>

    <!-- ARTICLE PLUS -->

    <string name="textViewTitre">Titre</string>
    <string name="editTextTitre"></string>
    <string name="textViewChapeau">Chapeau</string>
    <string name="textViewResume">Resume</string>
    <string name="textViewTexte">Texte</string>
    <string name="textViewContributeur">Contributeur</string>
    <string name="buttonCls">Cls</string>
    <string name="buttonAjouter">Ajouter</string>
    <string name="title_article_plus">Article Plus</string>
    <string name="title_activity_article_par_mot_cle">ArticleParMotCle</string>
    <string name="title_activity_rech_article">RechArticle</string>
    <string name="title_activity_article_liste">ArticleListe</string>

    <!-- ARTICLE LISTE -->
    <string name="labelBoutonRetour">Retour</string>
    <string name="defaultAffichage">Message&#8230;</string>
    <string name="defaultTitreArticle">Titre article</string>
    <string name="defaultDateParution">25/12/2014</string>
    <string name="defaultChapeau">Chapeau article</string>

    <!-- UN ARTICLE -->
    <string name="par">PAR</string>
    <string name="title_activity_parametrage">Parametrage</string>
    <string name="title_activity_menu_journaliste">MenuJournaliste</string>
    <string name="title_activity_menu_article">MenuArticle</string>

</resources>