<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ArticlePlus" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewTitre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="@string/textViewTitre" />

        <EditText
            android:id="@+id/editTextTitre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:ems="10"
            android:text="@string/editTextTitre" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewChapeau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewChapeau" />

        <EditText
            android:id="@+id/editTextChapeau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewResume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewResume" />

        <EditText
            android:id="@+id/editTextResume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewTexte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.18"
            android:text="@string/textViewTexte" />

        <EditText
            android:id="@+id/editTextTexte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.38"
            android:ems="10"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewContributeur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewContributeur" />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewContributeur"
        android:layout_width="match_parent"
        android:layout_height="35dp" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonCls"
            android:layout_width="131dp"
            android:layout_height="match_parent"
            android:text="@string/buttonCls" />

        <Button
            android:id="@+id/buttonAjouter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAjouter" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewRubrique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rubrique" />

        <Spinner
            android:id="@+id/spinnerRubrique"
            android:layout_width="wrap_content"
            android:layout_height="37dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categorie" />

        <Spinner
            android:id="@+id/spinnerCategorie"
            android:layout_width="wrap_content"
            android:layout_height="36dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewMotCle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mot(s)-Cle(s)" />

        <ListView
            android:id="@+id/listViewMotCle"
            android:layout_width="match_parent"
            android:layout_height="50dp" >

        </ListView>

    </LinearLayout>

</LinearLayout>
